--- a/index.html
+++ b/index.html
@@ -1,39 +1,44 @@
 <!doctype html>
 <html lang="en">
+
 <head>
     <meta charset="utf-8">
     <title>Matching Game</title>
     <meta name="description" content="">
+    <link rel="shortcut icon" type="image/ico" href="img/favicon.ico">
     <link rel="stylesheet prefetch" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
     <link rel="stylesheet prefetch" href="https://fonts.googleapis.com/css?family=Coda">
     <link rel="stylesheet" href="css/app.css">
 </head>
+
 <body>
 
     <div class="container">
         <header>
             <h1>Matching Game</h1>
         </header>
-
+        <div class="popup"></div>
         <section class="score-panel">
-        	<ul class="stars">
-        		<li><i id="star1" class="fa fa-star"></i></li>
-        		<li><i id="star2" class="fa fa-star"></i></li>
-        		<li><i id="star3" class="fa fa-star"></i></li>
-        	</ul>
 
-        	<div id="moves"></div> 
+            <ul class="stars">
+                <li><i class="fa fa-star"></i></li>
+                <li><i class="fa fa-star"></i></li>
+                <li><i class="fa fa-star"></i></li>
+            </ul>
 
+            <div id="moves"></div>
+            <div class="timer"></div>
             <div class="restart">
-        		<i class="fa fa-repeat"></i>
-        	</div>
+                <i class="fa fa-repeat"></i>
+            </div>
         </section>
 
         <ul class="deck">
-           
+
         </ul>
     </div>
 
     <script src="js/app.js"></script>
 </body>
+
 </html>
